--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '2'
 services:
   zookeeper:
     image: debezium/zookeeper:2.5
@@ -6,28 +5,38 @@ services:
       - "2181:2181"
       - "2888:2888"
       - "3888:3888"
+
   kafka:
     image: debezium/kafka:2.5
     ports:
       - "9094:9094"
       - "9092:9092"
-    links:
-      - zookeeper
     environment:
       - ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_LISTENERS=INTERNAL://0.0.0.0:9092,OUTSIDE://0.0.0.0:9094
       - KAFKA_ADVERTISED_LISTENERS=INTERNAL://kafka:9092,OUTSIDE://localhost:9094
       - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
       - KAFKA_INTER_BROKER_LISTENER_NAME=INTERNAL
+    depends_on:
+      - zookeeper
+
+  mysql:
+    image: mysql:latest
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=123456
+
   connect:
     image: debezium/connect:2.5
     ports:
       - "8083:8083"
-    links:
-      - kafka
     environment:
       - BOOTSTRAP_SERVERS=kafka:9092
       - GROUP_ID=1
       - CONFIG_STORAGE_TOPIC=my_connect_configs
       - OFFSET_STORAGE_TOPIC=my_connect_offsets
       - STATUS_STORAGE_TOPIC=my_connect_statuses
+    depends_on:
+      - kafka
+      - mysql
