--- a/cdc-debezium-consumer/src/main/resources/application-local.yml
+++ b/cdc-debezium-consumer/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306?coffee_shop
+    url: jdbc:mysql://localhost:3306/coffee_shop_v2
     username: root
     password: 123456
   jpa:
