Beautiful test output

--- a/cdc-debezium-consumer/build.gradle
+++ b/cdc-debezium-consumer/build.gradle
@@ -3,6 +3,12 @@ plugins {
     id 'application'
     id 'org.springframework.boot' version '2.7.12'
     id 'io.spring.dependency-management' version '1.1.0'
+    id "com.adarshr.test-logger" version "4.0.0"
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 application {
@@ -43,4 +49,9 @@ tasks.withType(Test).configureEach {
         events ("passed", "skipped", "failed")
         showStandardStreams = true
     }
+}
+
+testlogger {
+    theme 'mocha'
+    slowThreshold 500
 }
