--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,15 @@ services:
       - KAFKA_ADVERTISED_LISTENERS=INTERNAL://kafka:9092,OUTSIDE://localhost:9094
       - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
       - KAFKA_INTER_BROKER_LISTENER_NAME=INTERNAL
+      - KAFKA_REPLICA_FETCH_MAX_BYTES=20971520
+      - KAFKA_MAX_REQUEST_SIZE=20971520
+      - KAFKA_MESSAGE_MAX_BYTES=20971520
+      - KAFKA_CONSUMER_MAX_PARTITION_FETCH_BYTES=20971520
     depends_on:
       - zookeeper
 
   mysql:
-    image: mysql:latest
+    image: mysql:8.0
     ports:
       - "3306:3306"
     environment:
@@ -37,6 +41,13 @@ services:
       - CONFIG_STORAGE_TOPIC=my_connect_configs
       - OFFSET_STORAGE_TOPIC=my_connect_offsets
       - STATUS_STORAGE_TOPIC=my_connect_statuses
+      - CONNECT_MAX_REQUEST_SIZE=20971520
+      - CONNECT_BUFFER_MEMORY=20971520
+      - CONNECT_FETCH_MAX_BYTES=20971520
+      - CONNECT_MAX_PARTITION_FETCH_BYTES=20971520
+      - CONNECT_PRODUCER_MAX_REQUEST_SIZE=20971520
+      - CONNECT_CONSUMER_MAX_PARTITION_FETCH_BYTES=20971520
+      - CONNECT_MESSAGE_MAX_BYTES=20971520
     depends_on:
       - kafka
       - mysql
