--- a/cdc-debezium-consumer/build.gradle
+++ b/cdc-debezium-consumer/build.gradle
@@ -17,7 +17,7 @@ application {
 
 
 group = 'com.thachlp.cdc.consumer'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
 
 configurations {
     compileOnly {
