--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,30 @@
+networks:
+  debezium:
+
+
 services:
   zookeeper:
     image: debezium/zookeeper:2.7
+    container_name: zookeeper
     ports:
       - "2181:2181"
       - "2888:2888"
       - "3888:3888"
+    volumes:
+      - zookeeper-data:/var/lib/zookeeper/data
+    networks:
+      - debezium
 
   kafka:
     image: debezium/kafka:2.7
+    container_name: kafka
     ports:
       - "9094:9094"
       - "9092:9092"
+    volumes:
+      - kafka-data:/var/lib/kafka/data
+    links:
+      - zookeeper
     environment:
       - ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_LISTENERS=INTERNAL://0.0.0.0:9092,OUTSIDE://0.0.0.0:9094
@@ -21,8 +35,8 @@ services:
       - KAFKA_MAX_REQUEST_SIZE=20971520
       - KAFKA_MESSAGE_MAX_BYTES=20971520
       - KAFKA_CONSUMER_MAX_PARTITION_FETCH_BYTES=20971520
-    depends_on:
-      - zookeeper
+    networks:
+        - debezium
 
   mysql:
     image: mysql:8.0
@@ -33,8 +47,11 @@ services:
 
   connect:
     image: debezium/connect:2.7
+    container_name: connect
     ports:
       - "8083:8083"
+    links:
+      - kafka
     environment:
       - BOOTSTRAP_SERVERS=kafka:9092
       - GROUP_ID=1
@@ -48,6 +65,11 @@ services:
       - CONNECT_PRODUCER_MAX_REQUEST_SIZE=20971520
       - CONNECT_CONSUMER_MAX_PARTITION_FETCH_BYTES=20971520
       - CONNECT_MESSAGE_MAX_BYTES=20971520
-    depends_on:
-      - kafka
-      - mysql
+    volumes:
+      - connect-logs:/kafka/connect/logs
+    networks:
+        - debezium
+volumes:
+  kafka-data:
+  zookeeper-data:
+  connect-logs:
